# sandbox

./: CMakeLists.txt  config.json
src/: main.cpp
src/engine/: Context.cpp  Context.hpp  Entity.hpp  GameLoop.cpp  GameLoop.hpp  Timer.cpp  Timer.h  Timer.hpp  util.cpp  util.h  util.hpp
src/engine/component/: component.hpp  spatial.cpp  spatial.hpp
src/engine/components/: Camera.cpp  Camera.h  Geometry.h  Grid.h  Text.h  Transform.h  View.h
src/engine/core/: ComponentArray.h  ComponentManager.h  Context.h  Context.hpp  EntityManager.h  GameLoop.cpp  GameLoop.h  PackedComponentArray.h  ResourceManager.cpp  ResourceManager.h  Shader.h  System.h  SystemManager.h  componentArray.h  types.h
src/engine/core/input/: InputEvent.h  InputHandler.h  InputObserver.h  SdlInputHandler.cpp  SdlInputHandler.h
src/engine/core/test/: ComponentArray_test.cpp  ComponentManager_test.cc  DummyComponent.h  EntityManager_test.cc  SystemManager_test.cc
src/engine/geom/: Polygon.cpp  Polygon.hpp  Vector.cpp  Vector.hpp
src/engine/input/: InputHandler.hpp  InputObserver.hpp  SdlInputHandler.cpp  SdlInputHandler.hpp
src/engine/system/: Render.hpp
src/engine/systems/: CameraSystem.h  GlRenderSystem.h  GridSystem.h  PlayerControlSystem.h  RenderSystem.h  SdlRenderSystem.h  StarDataSystem.cpp  StarDataSystem.h  TextRenderSystem.h
src/shaders/: fragment.glsl  text_2d_frag.glsl  text_2d_vert.glsl  vertex.glsl
src/test/: ComponentArray_test.cc
src/util/: import.cpp  import.h  io.cpp  io.h  random.cpp  random.h  string.cpp  string.h  uuid.cpp  uuid.h
src/util/csv/: CSVRow.h
